# CGLMath

./: .gitignore  CMakeLists.txt  README.md  cglmath.c  cglmath.h  doxygen.conf
include/: cglmath.h
include/cglmath/: cglmath.h  float.h  matrix4f.h  matrix4f_type.h  quaternion.h  quaternion_type.h  transform.h  transform_type.h  vector2f_type.h  vector2i.h  vector2i_type.h  vector3f.h  vector3f_type.h  vector3i.h  vector3i_type.h  vector4f.h  vector4f_type.h
src/: float.c  matrix4f.c  quaternion.c  transform.c  vector3f.c  vector4f.c
